# oai-batchkit

./: .cursorignore  .cursorindexingignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  wrangler.jsonc
.cursor/plans/: batchkit-mvp-architecture_4b392a9e.plan.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/batchkit/domain/: __init__.py  batch.py  cost.py  job.py  schema.py
backend/src/batchkit/engine/: __init__.py  builder.py  downloader.py  merger.py  monitor.py  tokens.py
backend/src/batchkit/providers/: __init__.py  base.py  openai.py
backend/tests/: test_engine_smoke.py  test_smoke.py
examples/classification_responses_api/: run.yaml  task.py
examples/embeddings_corpus/: run.yaml  task.py
examples/moderations_audit/: run.yaml  task.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: smoke.test.ts
shell/: README.md  eslint.config.js  forge.config.js  package-lock.json  package.json
shell/src/: main.js  preload.js
src/oai_batchkit/: __init__.py  api.py  cli.py  pricing.json  task.py
src/oai_batchkit/_internal/: __init__.py  fingerprint.py  lockfile.py  logger.py
src/oai_batchkit/core/: __init__.py  builder.py  downloader.py  merger.py  monitor.py  retry_runner.py  state.py  submitter.py  tokens.py
src/oai_batchkit/notify/: __init__.py  base.py  desktop.py  email.py  slack.py
src/oaibatch/: __init__.py  api.py  cli.py  task.py
src/oaibatch/_internal/: __init__.py  lockfile.py  logger.py
src/oaibatch/core/: __init__.py  builder.py  downloader.py  merger.py  monitor.py  retry_runner.py  state.py  submitter.py  tokens.py
src/oaibatch/notify/: __init__.py  base.py  desktop.py  email.py  slack.py
tests/: conftest.py  test_smoke.py
