[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oai-batchkit"
version = "0.0.1"
description = "A generalizable CLI and Python framework for the OpenAI Batch API. Take any structured-output task from CSV to merged results without rewriting infrastructure."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Khaled Hanafi", email = "kamhhm@gmail.com" },
]
requires-python = ">=3.11"
keywords = [
    "openai",
    "batch",
    "llm",
    "cli",
    "structured-output",
    "embeddings",
    "moderations",
    "responses-api",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.75.0",
    "pydantic>=2.7.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0",
]
notify = [
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/k-hanafi/oai-batchkit"
Repository = "https://github.com/k-hanafi/oai-batchkit"
Issues = "https://github.com/k-hanafi/oai-batchkit/issues"

[project.scripts]
oai-batchkit = "oai_batchkit.cli:app"
obk = "oai_batchkit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oai_batchkit = ["pricing.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
