[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batchkit"
version = "0.0.0"
description = "Batchkit backend: ports-and-adapters engine and FastAPI app for LLM batch jobs."
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Khaled Hanafi", email = "kamhhm@gmail.com" }]
dependencies = [
  "openai>=1.55.0",
  "tenacity>=8.5.0",
  "tiktoken>=0.8.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pandas-stubs>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/batchkit"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
